# izg

./: .gitignore  README.md
ex1/: main.cpp  student.cpp
ex2/: student.cpp
ex3/: izg_lab_03
ex3/src/: student.cpp
ex4/: CMakeLists.txt  Makefile
ex4/3rdPartyLibs/GTest/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
ex4/CMake/: CMakeMarcos.cmake
ex4/include/: IZG_MultiDragger.h  IZG_RotateCylinderDragger.h  Student.h
ex4/src/: IZG_MultiDragger.cpp  IZG_RotateCylinderDragger.cpp  IZG_Scale1DDragger.cpp  IZG_Translate1DDragger.cpp  Student.cpp  main.cpp
ex4/tests/: CustomListener.h  StudentTests.cpp  tests.cpp
ex5/: globals.h  student.cpp
project/: CMakeLists.txt
project/doc/html/: annotated.html  classes.html  dir_df997ef5cbe81af8266600b381d65502.html  drawExample_8cpp.html  drawModel_8cpp.html  drawModel_8hpp.html  drawModel_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  fwd_8hpp.html  fwd_8hpp_source.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  gpu_8cpp.html  gpu_8hpp.html  gpu_8hpp_source.html  index.html  menudata.js  pages.html  structBuffer.html  structClearCommand.html  structCommand.html  structCommandBuffer.html  structDrawCommand.html  structFrame.html  structGPUMemory.html  structInFragment.html  structInVertex.html  structMesh.html  structModel.html  structNode.html  structOutFragment.html  structOutVertex.html  structProgram.html  structShaderInterface.html  (+7 more)
project/doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+32 more)
project/doc/latex/: annotated.tex  drawModel_8cpp.tex  drawModel_8hpp.tex  files.tex  fwd_8hpp.tex  gpu_8cpp.tex  gpu_8hpp.tex  index.tex  refman.tex  structBuffer.tex  structClearCommand.tex  structCommand.tex  structCommandBuffer.tex  structDrawCommand.tex  structFrame.tex  structGPUMemory.tex  structInFragment.tex  structInVertex.tex  structMesh.tex  structOutVertex.tex  structProgram.tex  structShaderInterface.tex  structVertexArray.tex  structVertexAttrib.tex  todo.tex  unionCommandData.tex
project/examples/: angry.cpp  anime.cpp  czFlagMethod.cpp  emptyMethod.cpp  modelMethod.cpp  modelMethod.hpp  phongMethod.cpp  rotatingTriangles.cpp  skFlagMethod.cpp  stairs.cpp  texturedQuadMethod.cpp  triangle3DMethod.cpp  triangleBufferMethod.cpp  triangleClip1Method.cpp  triangleClip2Method.cpp  triangleMethod.cpp
project/framework/: application.cpp  application.hpp  arguments.cpp  arguments.hpp  framebuffer.hpp  main.cpp  method.hpp  model.cpp  programContext.cpp  programContext.hpp  window.hpp
project/libs/ArgumentViewer/src/ArgumentViewer/: ArgumentViewer.cpp  ArgumentViewer.h
project/student/: documentation.dox  drawExample.cpp  drawModel.cpp  drawModel.hpp  fwd.hpp  gpu.cpp  gpu.hpp
project/tests/: clippingTests.cpp  commandBufferToStr.cpp  commandTests.cpp  conformanceTests.cpp  drawModelTests.cpp  finalImageTest.cpp  fragmentShaderTests.cpp  gpuMemToStr.cpp  gpuMemToStr.hpp  modelTestUtils.cpp  modelTestUtils.hpp  performanceTest.cpp  renderMethodFrame.cpp  renderMethodFrame.hpp  shaderTests.cpp  takeScreenShot.cpp  testCommon.cpp  testCommon.hpp  traverseModelTests.cpp  vertexShaderTests.cpp
